<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_background" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@drawable/action_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tab_timeline"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:clickable="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_timeline" />
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/list_view_divider_horizontal"/>

        <TextView
            android:id="@+id/text_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/text_timeline"
            android:textColor="@color/White" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/tab_discovery_tree"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:clickable="true" >
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/list_view_divider_horizontal"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_discovery_tree" />

        <TextView
            android:id="@+id/text_discovery_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imageView2"
            android:text="@string/text_discovery_tree"
            android:textColor="@color/White" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/tab_about"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:clickable="true" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_about" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/list_view_divider_horizontal" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/text_about"
            android:textColor="@color/White" />
    </RelativeLayout>

</LinearLayout>